--- a/Installer.cls
+++ b/Installer.cls
@@ -1,3 +1,5 @@
+Include %occInclude
+
 Class App.Installer
 {
 
@@ -9,6 +11,10 @@ XData MyInstall [ XMLNamespace = INSTALLER ]
   <Default Name="APPPATH" Dir="/opt/app/" />
   <Default Name="SOURCESPATH" Dir="${APPPATH}src" />
   <Default Name="RESOURCE" Value="%DB_${DBNAME}" /> 
+  
+  <Default Name="NAMESPACE2" Value="MSGVIEWER"/>
+  <Default Name="DBNAME2" Value="MSGVIEWER"/>
+  <Default Name="RESOURCE2" Value="%DB_${DBNAME2}" /> 
 
   <Namespace Name="${NAMESPACE}" Code="${DBNAME}" Data="${DBNAME}" Create="yes" Ensemble="0">
     <Configuration>
@@ -20,6 +26,16 @@ XData MyInstall [ XMLNamespace = INSTALLER ]
     <Import File="${SOURCESPATH}" Recurse="1"/>
 
     <LoadPage Dir="/csp/irismonitor" Flags="ck"/>
+  </Namespace>
+
+  <Namespace Name="${NAMESPACE2}" Code="${DBNAME2}" Data="${DBNAME2}" Create="yes" Ensemble="1">
+    <Configuration>
+      <Database Name="${DBNAME2}" Dir="${APPPATH}${DBNAME2}" Create="yes" Resource="${RESOURCE2}"/>
+    </Configuration>
+
+    <Import File="${SOURCESPATH}VAR/infra/util/InstallerProduction.cls" Recurse="1"/>
+
+    <Invoke Class="VAR.infra.util.InstallerProduction" Method="Install" CheckStatus="1" Return="status"/> 
   </Namespace>
 </Manifest>
 }
